force-app/main/default/objects/Order/fields/AssetReferenceId__c.field-meta.xml
<CustomField>
    <fullName>AssetReferenceId__c</fullName>
    <label>Asset Reference Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>