force-app/main/default/objects/Order/fields/ATPAccountId__c.field-meta.xml
<CustomField>
    <fullName>ATPAccountId__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ATP Account Id</label>
    <type>Text</type>
</CustomField>