force-app/main/default/objects/Order/fields/ATPBillingAccountId__c.field-meta.xml
<CustomField>
    <fullName>ATPBillingAccountId__c</fullName>
    <formula>vlocity_cmt__DefaultBillingAccountId__r.ATPBillingAccountId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ATPBillingAccountId</label>
    <type>Text</type>
</CustomField>