force-app/main/default/objects/Order/fields/BillingContact__c.field-meta.xml
<CustomField>
    <fullName>BillingContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rechnungskontakt</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orders (Rechnungskontakt)</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>