force-app/main/default/objects/Order/fields/MaxBandwidth__c.field-meta.xml
<CustomField>
    <fullName>MaxBandwidth__c</fullName>
    <description>Used to store the maximum bandwidth available</description>
    <label>maximal verfügbare Bandbreite</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>300</fullName>
            </value>
            <value>
                <fullName>600</fullName>
            </value>
            <value>
                <fullName>1000</fullName>
            </value>
            <value>
                <fullName>10000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>