force-app/main/default/objects/Order/fields/PlusNet_Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>PlusNet_Cancellation_Reason__c</fullName>
    <defaultValue>&quot;Other Reason&quot;</defaultValue>
    <label>PlusNet Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other Reason</fullName>
                <default>true</default>
                <label>Other Reason</label>
            </value>
            <value>
                <fullName>Customer initiated</fullName>
            </value>
            <value>
                <fullName>Incorrect information</fullName>
            </value>
            <value>
                <fullName>Customer requested other product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>