force-app/main/default/objects/Order/fields/PlusNet_Installation_Status__c.field-meta.xml
<CustomField>
    <fullName>PlusNet_Installation_Status__c</fullName>
    <defaultValue>&quot;Processing&quot;</defaultValue>
    <label>Assetisierung Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
                <default>true</default>
                <label>Processing</label>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <isActive>false</isActive>
                <label>In Progress</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>