force-app/main/default/objects/Order/fields/ShipAddress__c.field-meta.xml
<CustomField>
    <fullName>ShipAddress__c</fullName>
    <formula>ShipStreet__c + &apos; &apos; + ShipHouseNo__c + IF(ISNULL(ShipHouseNoExt__c), &apos;&apos;, &apos; &apos; + ShipHouseNoExt__c) +
IF(ISNULL(ShipAddressExt__c), &apos;&apos;, BR() + ShipAddressExt__c) +
ShipPostalCode__c + &apos; &apos; + ShipCity__c + IF(ISNULL(ShipCityExt__c), &apos;&apos;, &apos; &apos; + ShipCityExt__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lieferadresse</label>
    <type>Text</type>
</CustomField>