force-app/main/default/objects/Order/fields/ShipAddressExt__c.field-meta.xml
<CustomField>
    <fullName>ShipAddressExt__c</fullName>
    <label>Adresszusatz Lieferanschrift</label>
    <length>255</length>
    <type>Text</type>
</CustomField>