force-app/main/default/objects/Order/fields/ShipAddressId__c.field-meta.xml
<CustomField>
    <fullName>ShipAddressId__c</fullName>
    <label>ShipAddressId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>