force-app/main/default/objects/Order/fields/ShipCity__c.field-meta.xml
<CustomField>
    <fullName>ShipCity__c</fullName>
    <label>Stadt Lieferanschrift</label>
    <length>255</length>
    <type>Text</type>
</CustomField>