force-app/main/default/objects/Order/fields/ShipCityExt__c.field-meta.xml
<CustomField>
    <fullName>ShipCityExt__c</fullName>
    <label>Stadtteil Lieferanschrift</label>
    <length>255</length>
    <type>Text</type>
</CustomField>