force-app/main/default/objects/Order/fields/ShipCountry__c.field-meta.xml
<CustomField>
    <fullName>ShipCountry__c</fullName>
    <label>Land Lieferanschrift</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>