force-app/main/default/objects/Order/fields/ShipHouseNoExt__c.field-meta.xml
<CustomField>
    <fullName>ShipHouseNoExt__c</fullName>
    <label>Hausnummer Zusatz Lieferanschrift</label>
    <length>255</length>
    <type>Text</type>
</CustomField>