force-app/main/default/objects/Order/fields/ShippingEmail__c.field-meta.xml
<CustomField>
    <fullName>ShippingEmail__c</fullName>
    <label>Ship To Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>