force-app/main/default/objects/Order/fields/ShipPostalCode__c.field-meta.xml
<CustomField>
    <fullName>ShipPostalCode__c</fullName>
    <label>Postleitzahl Lieferanschrift</label>
    <length>20</length>
    <type>Text</type>
</CustomField>