force-app/main/default/objects/Order/fields/ShipState__c.field-meta.xml
<CustomField>
    <fullName>ShipState__c</fullName>
    <label>Bundesland Lieferanschrift</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GermanStates</valueSetName>
    </valueSet>
</CustomField>