force-app/main/default/objects/Order/fields/ShipStreet__c.field-meta.xml
<CustomField>
    <fullName>ShipStreet__c</fullName>
    <label>Strasse Lieferanschrift</label>
    <length>255</length>
    <type>Text</type>
</CustomField>