force-app/main/default/objects/Order/fields/TechnicalContact__c.field-meta.xml
<CustomField>
    <fullName>TechnicalContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technischer Kontak</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orders (Technischer Kontak)</relationshipLabel>
    <relationshipName>Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>