force-app/main/default/objects/Order/fields/TerminationCategory__c.field-meta.xml
<CustomField>
    <fullName>TerminationCategory__c</fullName>
    <label>Kündigungskategorie</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TerminationCategories</valueSetName>
    </valueSet>
</CustomField>