force-app/main/default/objects/Order/fields/TerminationReason__c.field-meta.xml
<CustomField>
    <fullName>TerminationReason__c</fullName>
    <description>Used to identify the reason behind a termination of a service</description>
    <label>Kündigngsgrund</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>TerminationCategory__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>TerminationReasons</valueSetName>
    </valueSet>
</CustomField>