force-app/main/default/objects/Order/listViews/Activation_Orders.listView-meta.xml
<ListView>
    <fullName>Activation_Orders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>SALES.ACCOUNT.OWNERALIAS</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>vlocity_cmt__OrderStatus__c</columns>
    <columns>PlusNet_Installation_Status__c</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.ACTIVATED_DATE</columns>
    <columns>ORDERS.TYPE</columns>
    <columns>CONTRACT.CONTRACT_TERM</columns>
    <columns>vlocity_cmt__OneTimeTotal__c</columns>
    <columns>vlocity_cmt__RecurringTotal__c</columns>
    <columns>vlocity_cmt__DefaultPremisesId__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.TYPE</field>
        <operation>equals</operation>
        <value>Activation</value>
    </filters>
    <label>Alle Aufträge Aktivierung</label>
</ListView>